@@ -75,6 +75,7 @@ admin.caption.usergroup.userfidield=Feldname der Benutzer-ID
 admin.caption.usergroup.username=Benutzername
 admin.caption.useversioning=Versionierung verwenden
 admin.caption.virtualwiki=Virtuelles Wiki
+admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=\u00C4nderungen wurden gespeichert.
 admin.message.indexrefreshed=Index neu erstellt
 admin.message.loginrequired=Nur Administratoren haben Zugriff auf diese Seite.
@@ -147,7 +148,10 @@ edit.warning.oldversion=Warnung\: Die editierte Version ist eine ung\u00FCltige 
 edit.warning.preview=Vorschau\: \u00C4nderungen wurden nicht gesichert.
 error.caption=Ein Systemfehler ist aufgetreten. Die Fehlermeldung lautet\:
 error.databaseconnection=Die Verbindung zur Datenbank konnte nicht hergestellt werden. Bitte \u00FCberpr\u00FCfen Sie die Datenbankeinstellungen.
+error.directorydelete=Error while deleting file from {0}: {1}
 error.directoryinvalid={0} ist kein g\u00FCltiges Verzeichnis.
+error.directoryread=Error while reading file from {0}: {1}
+error.directorywrite=Error while writing file to {0}: {1}
 error.heading=Ein Systemfehler ist aufgetreten. Die Fehlermeldung lautet\:
 error.login=Der Benutzername und/oder das Passwort ist fehlerhaft. Bitte versuchen Sie es nochmal.
 error.loginempty=Der Loginname mu\u00DF eingegeben werden.
