@@ -76,6 +76,7 @@ admin.caption.usergroup.username=\u7528\u6237\u540d
 admin.caption.usepreview=\u4f7f\u7528\u9884\u89c8
 admin.caption.useversioning=\u4f7f\u7528\u4fee\u8ba2\u7248\u672c
 admin.caption.virtualwiki=\u865a\u62df Wiki
+admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=\u4fdd\u5b58\u4fee\u6539
 admin.message.indexrefreshed=\u7d22\u5f15\u66f4\u65b0
 admin.message.loginrequired=\u53ea\u6709\u7ba1\u7406\u5458\u624d\u53ef\u4ee5\u8bbf\u95ee\u8be5\u9875\u9762\u3002
@@ -148,7 +149,10 @@ edit.warning.oldversion=\u8b66\u544a\uff1a\u73b0\u5728\u8fd0\u884c\u7684\u662f\u
 edit.warning.preview=\u9884\u89c8\uff1a\u4fee\u6539\u90e8\u5206\u5e76\u6ca1\u6709\u4fdd\u5b58
 error.caption=\u4ea7\u751f\u4e86\u4e00\u4e2a\u7cfb\u7edf\u9519\u8bef\uff0c\u9519\u8bef\u6d88\u606f\u662f\uff1a
 error.databaseconnection=\u4e0d\u80fd\u540c\u6570\u636e\u5e93\u5efa\u7acb\u8fde\u63a5\uff0c\u8bf7\u91cd\u65b0\u68c0\u67e5\u8bbe\u7f6e\u3002
+error.directorydelete=Error while deleting file from {0}: {1}
 error.directoryinvalid={0} \u662f\u65e0\u6548\u7684\u8def\u5f84\u3002
+error.directoryread=Error while reading file from {0}: {1}
+error.directorywrite=Error while writing file to {0}: {1}
 error.heading=\u4ea7\u751f\u4e86\u4e00\u4e2a\u7cfb\u7edf\u9519\u8bef\uff0c\u9519\u8bef\u6d88\u606f\u662f\uff1a
 error.login=\u7528\u6237\u540d\u6216\u5bc6\u7801\u9519\u8bef\uff0c\u8bf7\u91cd\u65b0\u8f93\u5165\u3002
 error.loginempty=\u767b\u5f55\u540d\u4e0d\u80fd\u4e3a\u7a7a\u3002
