@@ -53,9 +53,7 @@ function onPersistenceType() {
 <form name="setup" method="post">
 <table style="border:2px solid #333333;padding=1em;">
 <c:if test="${!empty errors}">
-<tr><td colspan="2" align="center"><div style="color:red;size=110%;">
-<c:forEach items="${errors}" var="message"><f:message key="${message.key}"><f:param value="${message.params[0]}" /></f:message><br /></c:forEach>
-</div></td></tr>
+<tr><td class="red" colspan="2" align="center"><c:forEach items="${errors}" var="message"><f:message key="${message.key}"><f:param value="${message.params[0]}" /></f:message><br /></c:forEach></td></tr>
 </c:if>
 <c:if test="${!empty message}"><tr><td colspan="2" align="center"><div style="color:green;size=110%;"><f:message key="${message.key}" /></div></td></tr></c:if>
 <tr><td colspan="2">&#160;</td></tr>
